Atualizando Projeto para Spring 3