@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.4</version>
+        <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 	<groupId>br.com.springboot</groupId>
@@ -14,9 +14,9 @@
 	<name>tabelafipe</name>
 	<description>Demo project for Spring Boot</description>
       <properties>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
         <openapi.version>1.5.10</openapi.version>
-        <spring-cloud.version>2020.0.3</spring-cloud.version>
+        <spring-cloud.version>2022.0.1</spring-cloud.version>
       </properties>
   <dependencies>
     <dependency>
@@ -40,6 +40,12 @@
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-test</artifactId>
+          <scope>test</scope>
+      </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -111,6 +117,11 @@
           <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
           <version>2.1.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis-spring</artifactId>
+          <version>3.0.3</version>
+      </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
@@ -151,8 +162,17 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>15</source>
-                <target>15</target>
+                <source>21</source>
+                <target>21</target>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <configuration>
+                <argLine>-XX:+EnableDynamicAgentLoading</argLine>
             </configuration>
         </plugin>
     </plugins>
